@@ -8,6 +8,7 @@ $Id$
 	  messages are logged.  It is off by default.  For now this
 	  affects only AIM messages, later zephyr login/logout messages
 	  will also be logged if this is set to 'on'
+	Added 'show license'
 	
 2.1.4
 	Normalize and downcase AIM names for logging
